# mangle

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml  version_pump.sh
.circleci/: config.yml
examples/: hello.ga
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
src/: .main.rs.rustfmt  interpreter.rs  lib.rs  main.rs  operators.rs  pylib.rs  value.rs
tests/: cat.ga  readfile.rs
