[package]
name = "mangle"
version = "0.0.1"
edition = "2021"

[lib]
name = "mangle"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "mangle"
path = "src/main.rs"

[dependencies]
rustyline = "9.1.0"
dirs = "4.0"
unicode-segmentation = "1.6.0"
clap = { version = "3.1.8", features = ["derive"] }
pyo3 = { version = "0.16.1", features = ["extension-module"] }
