[package]
name = "mangle"
license = "MIT"
homepage = "https://mangle.ga"
repository = "https://github.com/matheusfillipe/mangle" 
documentation = "https://github.com/matheusfillipe/mangle" 
readme = "README.md"
keywords = ["exolang", "python", "pyo3", "repl"]
categories = ["exolang", "repl", "python"]
description = "Exolang that can take any utf8 text as valid code and return some result out of it"
version = "0.0.4"
edition = "2021"
authors = ["mattf <matheusfillipeag@gmail.com>"]

[workspace]
members = ["python"]

[lib]
name = "mangle"
path = "src/lib.rs"

[[bin]]
name = "mangle"
path = "src/main.rs"

[dependencies]
rustyline = "9.1.0"
dirs = "4.0"
unicode-segmentation = "1.6.0"
clap = { version = "3.1.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
