[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "mangle"
readme = "README.md"
repository = "https://github.com/matheusfillipe/mangle"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Programming Language",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

